- Update library to use jdk 10. - Update dependencies to latest versions. - Fix code issues caused by version updates.