@@ -2,6 +2,7 @@ package com.coreleo.util;
 
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
+import java.util.Base64;
 
 import javax.xml.bind.DatatypeConverter;
 
@@ -20,7 +21,8 @@ public final class CsrfUtil
 		final byte[] random = new byte[size];
 		sr = SecureRandom.getInstance("SHA1PRNG");
 		sr.nextBytes(random);
-		return DatatypeConverter.printBase64Binary(random);
+		//return DatatypeConverter.printBase64Binary(random);
+		return Base64.getEncoder().encodeToString(random);
 		//final BASE64Encoder encoder = new BASE64Encoder();
 		//return encoder.encode(random);
 	}
